--- a/_tweets-md/2023/2023-01-01-tweets.md
+++ b/_tweets-md/2023/2023-01-01-tweets.md
@@ -60,7 +60,7 @@ Replying to [@sbisson](https://twitter.com/sbisson/status/1602310567439568898)
 
 > For example, in next week's virtual Silicon Salon 3, Kavya Sreedhar will be presenting about a 16nmn semiconductor design for constant-time modular inversion for Curve25519 using XGCD — 31 times faster than software! But more importantly, it can be hardened in silicon…[2/9] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527730691821568-FmDRyAZacAARLrT.jpg)
+> ![1612527730691821568-FmDRyAZacAARLrT]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527730691821568-FmDRyAZacAARLrT.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 09 19:12:24 +0000 2023](https://twitter.com/ChristopherA/status/1612527730691821568)
 
@@ -68,7 +68,7 @@ Replying to [@sbisson](https://twitter.com/sbisson/status/1602310567439568898)
 
 > Why is the discussion &amp; community we are building at #SiliconSalon so important? Our problem is that silicon-based security is lagging, supporting only decade+ old crypto—no blockchain, no ZKP. The result is modern cryptography is done in user space. Let's solve this!🧵… [1/9] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527727697088512-FmDX4tvaMAEa_fL.jpg)
+> ![1612527727697088512-FmDX4tvaMAEa_fL]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527727697088512-FmDX4tvaMAEa_fL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 09 19:12:24 +0000 2023](https://twitter.com/ChristopherA/status/1612527727697088512)
 
@@ -76,9 +76,9 @@ Replying to [@sbisson](https://twitter.com/sbisson/status/1602310567439568898)
 
 > Bunnie of @bunniestudios will be talking about "where to draw the line for openness…the perceived fear/uncertainty/doubt (FUD) around a particular attack surface tends to have an inverse relation to the actual size of the attack surface."…[3/9] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527734361841664-FmDSpAFaMAAF87E.png)
+> ![1612527734361841664-FmDSpAFaMAAF87E]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527734361841664-FmDSpAFaMAAF87E.png)
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527734361841664-FmDSv-qaMAADFPm.png)
+> ![1612527734361841664-FmDSv-qaMAADFPm]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527734361841664-FmDSv-qaMAADFPm.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 09 19:12:25 +0000 2023](https://twitter.com/ChristopherA/status/1612527734361841664)
 
@@ -188,7 +188,7 @@ Replying to [@KyleOfTheCorn and @SeedSigner](https://twitter.com/KyleOfTheCorn/s
 
 > Continuing on this #PatentBreaker thread: Ideally, the Hilbert curve would be focused on where people actually live. Here is Europe &amp; Asia. Of course any useful Hilbert curve for use zk-proofs to support #LocationPrivacy-focused geomapping would be a much finer grid. 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1615138869695090690-Fmof0WvaMAA-Plm.jpg)
+> ![1615138869695090690-Fmof0WvaMAA-Plm]({{ site.url }}{{ site.baseurl }}/assets/images/media/1615138869695090690-Fmof0WvaMAA-Plm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 17 00:08:09 +0000 2023](https://twitter.com/ChristopherA/status/1615138869695090690)
 
@@ -417,7 +417,7 @@ Replying to [@lorenc_dan, @awakecoding and @BenLaurie](https://twitter.com/loren
 
 > This Tuesday at noon ET / 9am PT, @BlockchainComns is presenting on Gordian Envelope for the W3C Credentials Community Group. We’d love you to join us! [1/6] [https://www.w3.org/events/meetings/80a1023e-569b-4714-8fab-d1b84f2c3478/20240604T120000](https://www.w3.org/events/meetings/80a1023e-569b-4714-8fab-d1b84f2c3478/20240604T120000) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1618720700390584320-FnbZ1nQaUAAAWvj.jpg)
+> ![1618720700390584320-FnbZ1nQaUAAAWvj]({{ site.url }}{{ site.baseurl }}/assets/images/media/1618720700390584320-FnbZ1nQaUAAAWvj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 26 21:21:04 +0000 2023](https://twitter.com/ChristopherA/status/1618720700390584320)
 
@@ -592,7 +592,7 @@ Replying to [@sbisson](https://twitter.com/sbisson/status/1602310567439568898)
 
 > For example, in next week's virtual Silicon Salon 3, Kavya Sreedhar will be presenting about a 16nmn semiconductor design for constant-time modular inversion for Curve25519 using XGCD — 31 times faster than software! But more importantly, it can be hardened in silicon…[2/9] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527730691821568-FmDRyAZacAARLrT.jpg)
+> ![1612527730691821568-FmDRyAZacAARLrT]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527730691821568-FmDRyAZacAARLrT.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 09 19:12:24 +0000 2023](https://twitter.com/ChristopherA/status/1612527730691821568)
 
@@ -600,7 +600,7 @@ Replying to [@sbisson](https://twitter.com/sbisson/status/1602310567439568898)
 
 > Why is the discussion &amp; community we are building at #SiliconSalon so important? Our problem is that silicon-based security is lagging, supporting only decade+ old crypto—no blockchain, no ZKP. The result is modern cryptography is done in user space. Let's solve this!🧵… [1/9] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527727697088512-FmDX4tvaMAEa_fL.jpg)
+> ![1612527727697088512-FmDX4tvaMAEa_fL]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527727697088512-FmDX4tvaMAEa_fL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 09 19:12:24 +0000 2023](https://twitter.com/ChristopherA/status/1612527727697088512)
 
@@ -608,9 +608,9 @@ Replying to [@sbisson](https://twitter.com/sbisson/status/1602310567439568898)
 
 > Bunnie of @bunniestudios will be talking about "where to draw the line for openness…the perceived fear/uncertainty/doubt (FUD) around a particular attack surface tends to have an inverse relation to the actual size of the attack surface."…[3/9] 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527734361841664-FmDSpAFaMAAF87E.png)
+> ![1612527734361841664-FmDSpAFaMAAF87E]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527734361841664-FmDSpAFaMAAF87E.png)
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527734361841664-FmDSv-qaMAADFPm.png)
+> ![1612527734361841664-FmDSv-qaMAADFPm]({{ site.url }}{{ site.baseurl }}/assets/images/media/1612527734361841664-FmDSv-qaMAADFPm.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 09 19:12:25 +0000 2023](https://twitter.com/ChristopherA/status/1612527734361841664)
 
@@ -720,7 +720,7 @@ Replying to [@KyleOfTheCorn and @SeedSigner](https://twitter.com/KyleOfTheCorn/s
 
 > Continuing on this #PatentBreaker thread: Ideally, the Hilbert curve would be focused on where people actually live. Here is Europe &amp; Asia. Of course any useful Hilbert curve for use zk-proofs to support #LocationPrivacy-focused geomapping would be a much finer grid. 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1615138869695090690-Fmof0WvaMAA-Plm.jpg)
+> ![1615138869695090690-Fmof0WvaMAA-Plm]({{ site.url }}{{ site.baseurl }}/assets/images/media/1615138869695090690-Fmof0WvaMAA-Plm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 17 00:08:09 +0000 2023](https://twitter.com/ChristopherA/status/1615138869695090690)
 
@@ -949,7 +949,7 @@ Replying to [@lorenc_dan, @awakecoding and @BenLaurie](https://twitter.com/loren
 
 > This Tuesday at noon ET / 9am PT, @BlockchainComns is presenting on Gordian Envelope for the W3C Credentials Community Group. We’d love you to join us! [1/6] [https://www.w3.org/events/meetings/80a1023e-569b-4714-8fab-d1b84f2c3478/20240604T120000](https://www.w3.org/events/meetings/80a1023e-569b-4714-8fab-d1b84f2c3478/20240604T120000) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/1618720700390584320-FnbZ1nQaUAAAWvj.jpg)
+> ![1618720700390584320-FnbZ1nQaUAAAWvj]({{ site.url }}{{ site.baseurl }}/assets/images/media/1618720700390584320-FnbZ1nQaUAAAWvj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 26 21:21:04 +0000 2023](https://twitter.com/ChristopherA/status/1618720700390584320)
 
