--- a/_tweets-md/2023/2023-12-01-tweets.md
+++ b/_tweets-md/2023/2023-12-01-tweets.md
@@ -472,7 +472,7 @@ Replying to [@peterktodd, @Blockstream and @Liquid_BTC](https://twitter.com/pete
 >   
 > Let’s break down the pros and cons: 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/17392191597106464530GCIb37DWQAALnmG.jpg)
+> ![17392191597106464530GCIb37DWQAALnmG]({{ site.url }}{{ site.baseurl }}/assets/images/media/17392191597106464530GCIb37DWQAALnmG.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Dec 25 09:38:55 +0000 2023](https://twitter.com/ChristopherA/status/1739219159710646457)
 
@@ -502,6 +502,6 @@ Replying to [@100AcresRanch and @HODLRecruiter](https://twitter.com/100AcresRanc
 >   
 > 👍 “hardware…is much more difficult to reverse-engineer than software, but this is a flawed approach, because sooner or later, all secrets are revealed. Systems that rely on ‘security through obscurity’ can never be truly secure.” [https://twitter.com/karpathy/status/1740137276833943974](https://twitter.com/karpathy/status/1740137276833943974) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/17401708887992038230GCZUM2ZbAAAUhje.jpg)
+> ![17401708887992038230GCZUM2ZbAAAUhje]({{ site.url }}{{ site.baseurl }}/assets/images/media/17401708887992038230GCZUM2ZbAAAUhje.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 28 00:40:45 +0000 2023](https://twitter.com/ChristopherA/status/1740170888799203822)
