--- a/_tweets-md/2024/2024-01-01-tweets.md
+++ b/_tweets-md/2024/2024-01-01-tweets.md
@@ -1,6 +1,252 @@
----    
-title: "Social Media - January"
+---
+title: "Social Media - Febuary"
 date: "2024-01-31"
 time:  23:59:59 +0000
 ---
 
+> RT @OpenSats: BITWISE TO PROVIDE 10% OF PROFIT TO BITCOIN DEVS FOR THE NEXT TEN YEARS. 
+> 
+> ![1745270016587727186-GDg3omNXMAEmHAz]({{ site.url }}{{ site.baseurl }}/assets/images/media/1745270016587727186-GDg3omNXMAEmHAz.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 02:22:52 +0000 2024](https://twitter.com/ChristopherA/status/1745270016587727186)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530137112908249)
+
+> There’s also a @BlockchainComns video that just excerpts the Animated QR Implementation Guide from the meeting. [4/9] https://www.youtube.com/watch?v=z9fmgCqMZvw
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:29 +0000 2024](https://twitter.com/ChristopherA/status/1745530138245390545)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530135758168272)
+
+> Animated QRs have been Blockchain Commons’ most popular (and most implemented) specification, but to date developers had to work from source code to see how the Fountain Codes worked. Now there’s a complete developers guide. [3/9] https://github.com/BlockchainCommons/Research/blob/master/papers/bcr-2024-001-multipart-ur.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:29 +0000 2024](https://twitter.com/ChristopherA/status/1745530137112908249)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530134596345952)
+
+> Why do you need Animated QRs? To safely and securely transmit big data, as QRs have tight limits. PSBTs were the use case that pushed the demand, but supporting key recovery with metadata is another example of the need to transmit more data. [2/9] https://www.youtube.com/watch?v=HsFF5HPKQIk
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:29 +0000 2024](https://twitter.com/ChristopherA/status/1745530135758168272)
+
+----
+
+> Our January Gordian Developers Meeting from @BlockchainComns focused Animated QRs with Fountain Codes, leveraging Multi-Part URs. Used by  various airgapped Bitcoin Wallets to transfer PSBTs, they are also useful in other scenarios  [1/9]. https://www.youtube.com/watch?v=xRYgEczhekg
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:29 +0000 2024](https://twitter.com/ChristopherA/status/1745530134596345952)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530140929724512)
+
+> The research status info was of particular note. @BlockchainComns releases specifications, but they’re works in process, in coordination with the community. The new statuses note how stable any specification is, based on community implementation [7/9] https://github.com/BlockchainCommons/Research/blob/master/README.md#status 
+> 
+> ![1745530142104150381-GDlcwPRa4AMcmkz]({{ site.url }}{{ site.baseurl }}/assets/images/media/1745530142104150381-GDlcwPRa4AMcmkz.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:30 +0000 2024](https://twitter.com/ChristopherA/status/1745530142104150381)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530139671453778)
+
+> There was lots more at the meeting. dCBOR, ed25519 support in Seed Tool, research statuses, and a look at our future work on open development of libraries to secure signing via NFCs. [6/9] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:30 +0000 2024](https://twitter.com/ChristopherA/status/1745530140929724512)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530138245390545)
+
+> Now, you can see (or read) all about how to make Animated QRs work in an efficient way, using Fountain Codes so that the whole set of data doesn’t have to be retransmitted when something is (inevitably) missed. [5/9] https://developer.blockchaincommons.com/animated-qrs/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:30 +0000 2024](https://twitter.com/ChristopherA/status/1745530139671453778)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530144427774327)
+
+> Please help to support this continuing work by becoming a monthly financial sponsor of @BlockchainComns  via Github. 2023 was a tough year for many of our patrons, so we’re seeking more funding to help keep this work going. [9/9] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:31 +0000 2024](https://twitter.com/ChristopherA/status/1745530145526751720)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1745530142104150381)
+
+> The video, the transcript and slides for the January Gordian meeting are available, and you can see all of our other Gordian Developer Meetings on  topics of wallet interoperability, user choice, and safety of your digital assets [8/9] at: https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:36:31 +0000 2024](https://twitter.com/ChristopherA/status/1745530144427774327)
+
+----
+
+> RT @DecentralizedID: DIF is thrilled to welcome Kim Hamilton-Duffy as our new Executive Director!  
+> https://blog.identity.foundation/dif-welcomes-our-new-executive-director/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 16 03:58:29 +0000 2024](https://twitter.com/ChristopherA/status/1747106019053010957)
+
+----
+
+> I worked with @kimdhamilton for a number of years as fellow co-chair of W3C-CCG and as a leader in @RWOTEvents — she is great to collaborate with and a real credit to @DecentralizedID that they are working with her. Congratulations to both! https://twitter.com/DecentralizedID/status/1746961032927691094
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 16 04:02:19 +0000 2024](https://twitter.com/ChristopherA/status/1747106983474544730)
+
+----
+
+> Last week, @blockchaincomns proudly released its annual report to patrons and the wider community. Delve into our key innovations in digital asset wallet interoperability, and our transformative role in championing standards for openness and resilience. Discover more!…🧵[1/14] https://twitter.com/BlockchainComns/status/1749505317459911061
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:24 +0000 2024](https://twitter.com/ChristopherA/status/1749553879195455609)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553882580324770)
+
+> In 2023, @blockchaincomns actively fostered community collaboration with a dozen insightful developer meetings, a #FROST round table, and impactful #SiliconSalon workshops. Discover the rich archives of these discussions in our GitHub repository. [4/14] https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:25 +0000 2024](https://twitter.com/ChristopherA/status/1749553884782305428)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553881024168386)
+
+> dCBOR guarantees data consistency and interoperability across platforms, vital for our Gordian Envelope spec. Leveraging hashed elision, Envelope enhances digital asset privacy. These two specifications are cornerstones of our architecture. [3/14] https://developer.blockchaincommons.com/envelope/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:25 +0000 2024](https://twitter.com/ChristopherA/status/1749553882580324770)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553879195455609)
+
+> One major focus for the year was international standards. Not only is dCBOR, our deterministic CBOR proposal moving forward on the standards track within the IETF, but we're hopeful it'll become an RFC soon. [2/11] https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/ [2/14]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:25 +0000 2024](https://twitter.com/ChristopherA/status/1749553881024168386)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553886262952161)
+
+> Collaborative Seed Recovery (CSR) project has been a focus since late 2022. It offers a way to resiliently protect your digital-assets, using secret shares. Choose from self-sovereign offline storage, social recovery, or secure remote server shares. [6/14] https://developer.blockchaincommons.com/csr/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:26 +0000 2024](https://twitter.com/ChristopherA/status/1749553887844106640)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553884782305428)
+
+> One of those meetings was on #FROST, an important up-and-coming cryptographic technology in the digital-asset ecosystem that allows for quorum signatures. This round table gave developers the opportunity to each talk about their own challenges. [5/14] https://developer.blockchaincommons.com/frost/meeting1/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:26 +0000 2024](https://twitter.com/ChristopherA/status/1749553886262952161)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553891384152224)
+
+> This year @blockchaincomns demonstrated our commitment to #OpenDevelopment with a new comprehensive framework. Join us in redefining 'open' to encompass transparency, collaboration, and equitable solutions for all. Together, we make a difference! [9/14] https://www.blockchaincommons.com/articles/Open-Development/ 
+> 
+> ![1749553892793409662-GEeRTOYbAAAFQLt]({{ site.url }}{{ site.baseurl }}/assets/images/media/1749553892793409662-GEeRTOYbAAAFQLt.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:27 +0000 2024](https://twitter.com/ChristopherA/status/1749553892793409662)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553889681322407)
+
+> Another 2023 milestone: the initial release of reference code for Gordian Depository. As part of our CSR, it exemplifies secure storage &amp; recovery of secret shares, reinforcing our commitment to robust digital asset protection and open development. [8/14] https://github.com/BlockchainCommons/bc-depo-rust
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:27 +0000 2024](https://twitter.com/ChristopherA/status/1749553891384152224)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553887844106640)
+
+> This year, our CSR project made significant strides. A major update to Gordian Envelope now enables secure storage of essential metadata alongside cryptographic seeds; such derivation paths, notes, transaction details, and more. A leap forward in digital asset security. [7/14]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:27 +0000 2024](https://twitter.com/ChristopherA/status/1749553889681322407)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553894538264796)
+
+> Discover the full journey of @blockchaincomns. Along with our 2023 yearly report, delve into past annual reports and detailed quarterly updates for a complete picture of our progress and innovation. [11/14] https://www.blockchaincommons.com/quarterlies/Yearly-2023/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:28 +0000 2024](https://twitter.com/ChristopherA/status/1749553896270471461)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553892793409662)
+
+> As we near our 5th anniversary, the growth of our codebase and documentation led to a significant overhaul of our website. In particular, discover the revamped developer site, a hub for resources on implementing our interoperable specifications. [10/14] https://developer.blockchaincommons.com/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:28 +0000 2024](https://twitter.com/ChristopherA/status/1749553894538264796)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553900166996437)
+
+> Join us in shaping the future of digital assets &amp; wallet interoperability. Support us as a financial sponsor for a more open, innovative, resilient digital asset ecosystem. Your sponsorship is key to our success. Sponsor us today via @GitHub.  [14/14] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:29 +0000 2024](https://twitter.com/ChristopherA/status/1749553901593043447)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553898459984099)
+
+> As we reflect on our 2023 milestones, we acknowledge the tough times our patrons have endured, affecting our funding. Now more than ever, @blockchaincomns relies on your support to sustain and advance our vital and pioneering work. [13/14]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:29 +0000 2024](https://twitter.com/ChristopherA/status/1749553900166996437)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1749553896270471461)
+
+> Looking ahead, @blockchaincomns is poised for an exciting 2024! We're gearing up for more groundbreaking work in digital asset standards, community collaborations, and open development. Stay tuned for what's next in our mission for a resilient and open blockchain future. [12/14]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 22 22:05:29 +0000 2024](https://twitter.com/ChristopherA/status/1749553898459984099)
+
+----
+
+Replying to [@BTCGandalf](https://twitter.com/BTCGandalf/status/1749602971766170076)
+
+> To be clear, for Bitcoin (and most cryptocurrencies) 12 words has the same level of security as 24 words, as Bitcoin itself only has 128 bits of security (and most cryptographers argue slightly less). Thus 24 words is overkill, at the price of confusion and error. See free book…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 23 02:58:39 +0000 2024](https://twitter.com/ChristopherA/status/1749627675893969125)
+
+----
+
+> A interesting comparison. Worth reading: https://twitter.com/sfmnemonic/status/1680385557439082497
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 24 02:08:09 +0000 2024](https://twitter.com/ChristopherA/status/1749977355999989873)
+
+----
+
+> RT @peterktodd: https://lists.linuxfoundation.org/pipermail/bitcoin-dev/2024-January/022308.html  
+>   
+> https://github.com/petertodd/bitcoin/tree/libre-relay-v26.0  
+>   
+> tl;dr: I have a Libre Relay prototype available for testing. It does thre…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 25 00:53:47 +0000 2024](https://twitter.com/ChristopherA/status/1750321029132751114)
+
+----
+
+> #IndividualityWithoutIsolation I was going through some old photos of my old co-working space in Berkeley (c2007) and this particular sign on our white wall at the entrance really resonates with me post-Covid: 
+> 
+> ![1750597800717619275-GEtfLAzakAAqblK]({{ site.url }}{{ site.baseurl }}/assets/images/media/1750597800717619275-GEtfLAzakAAqblK.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 25 19:13:34 +0000 2024](https://twitter.com/ChristopherA/status/1750597800717619275)
+
+----
+
+> My laugh of the day is rather obscure - "scenes from distributed systems" by @b0rk https://twitter.com/b0rk/status/1056560207562711041
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 25 19:39:04 +0000 2024](https://twitter.com/ChristopherA/status/1750604217277141325)
+
+----
+
+> RT @mireillemoret: “The sensitive data categories are arbitrary and lack any coherent theory for identifying them.” That’s quite a blow in…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 30 02:13:05 +0000 2024](https://twitter.com/ChristopherA/status/1752152925584122186)
