--- a/_tweets-md/2024/2024-02-01-tweets.md
+++ b/_tweets-md/2024/2024-02-01-tweets.md
@@ -1,6 +1,195 @@
----    
-title: "Social Media - February"
-date: "2024-02-29"
-time:  23:59:59 +0000
----
+> RT @RWOTEvents: We've now officially finalized Christiane Wirrig's paper on "The Ecosystem Coordinator’s Role in SSI Ecosystem Management".…
 
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 01 20:28:03 +0000 2024](https://twitter.com/ChristopherA/status/1753153258690891782)
+
+----
+
+> I had my #VisionPro demo today. 30m with their demo at an Apple Store. As well done as previewers say, but the main thing I wanted to test was seeing my MackBookPro display. I also chatted with @Dom of old #iPhoneDevCamp team about prospects for https://visiondevcamp.org. Sponsors? https://twitter.com/NicoleLazzaro/status/1724932006872817935
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 03 02:22:02 +0000 2024](https://twitter.com/ChristopherA/status/1753604730075627986)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1753604730075627986)
+
+> Best video I’ve seen so far that explains the #VisionPro experience is by @MKBHD at https://youtu.be/dtp6b76pMak?si=FnhpIoajB4GDd5zH In particular see the FaceTime section near the end. I had some personal experience talking with @dom this way. Imperfect but an interesting social construction.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 03 03:04:19 +0000 2024](https://twitter.com/ChristopherA/status/1753615370609717588)
+
+----
+
+Replying to [@n1ckler, @salvatoshi, @_sriramk_, @utxoclub, @jesseposner, @chelseakomlo, @BlockstreamJade, @PavolRusnak, @FrostsnapTech and @blksresearch](https://twitter.com/n1ckler/status/1754083422220300497)
+
+> The authors of the FROST paper (@chelseakomlo &amp; Ian Golderberg), and number of different developer teams came to our 1st meeting of an Implementers Round Table in November. We plan to have another in March.  
+> https://developer.blockchaincommons.com/frost/meeting1/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 04 22:05:11 +0000 2024](https://twitter.com/ChristopherA/status/1754264867174002847)
+
+----
+
+Replying to [@n1ckler, @salvatoshi, @_sriramk_, @utxoclub, @jesseposner, @chelseakomlo, @BlockstreamJade, @PavolRusnak, @FrostsnapTech and @blksresearch](https://twitter.com/ChristopherA/status/1754264867174002847)
+
+> If you are interested in presenting at the next FROST Round Table, contact me. You can also subscribe to our wallet developer community announcement list (or join our Signal group) at https://www.blockchaincommons.com/subscribe/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 04 22:07:18 +0000 2024](https://twitter.com/ChristopherA/status/1754265399426949519)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754598956037030021)
+
+> In many ways, @BlockchainComns is serving as an ecosystem coordinator for self-sovereign wallet developers.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:12:44 +0000 2024](https://twitter.com/ChristopherA/status/1754598957374931172)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754598954212458534)
+
+> Some SSI ecosystems: National Association of Convenience Stores (NACS), Open Credentialing Initiative (OCI), IDUnion, mobile driver licence (mDL). The markdown version of the full paper is at https://github.com/WebOfTrustInfo/rwot12-cologne/blob/main/final-documents/ecosystem-management.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:12:44 +0000 2024](https://twitter.com/ChristopherA/status/1754598956037030021)
+
+----
+
+> I like this term Ecosystem Coordinator "With SSI being an ecosystem technology, this value is inexorably related to the degree to which the Ecosystem Coordinator achieves to represent the stakeholders' interests inside and outside of their sphere." https://twitter.com/RWOTEvents/status/1754596484870524984
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:12:44 +0000 2024](https://twitter.com/ChristopherA/status/1754598954212458534)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754600457186750823)
+
+> After did:web came out, I proposed a near clone, did:onion, that uses Tor for web pages, offering some decentralization. However, as did not get much support, it has been on hold. I'll have to investigate these ideas to see if did:onion should be updated. https://github.com/BlockchainCommons/did-method-onion
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:18:42 +0000 2024](https://twitter.com/ChristopherA/status/1754600458558341630)
+
+----
+
+> I've never endorsed did:web as I've always been uncomfortable with it, but also I didn't block its acceptance into the did registry. This paper dives into some of the shortcoming of did:web, and make some suggestions. https://twitter.com/RWOTEvents/status/1754596075749715979
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 05 20:18:42 +0000 2024](https://twitter.com/ChristopherA/status/1754600457186750823)
+
+----
+
+> Gordian Seed Tool, the @BlockchainComns iOS exemplar for protecting and using your cryptographic seeds, has been updated to version 1.6 and is available this week for free. [1/11] https://apps.apple.com/us/app/gordian-seed-tool/id1545088229
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:03 +0000 2024](https://twitter.com/ChristopherA/status/1754965702698840435)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965705899077769)
+
+> Gordian Seed Tool 1.6 demonstrates how Envelope can be used to export seeds with metadata including notes, dates, and even descriptors. This can be crucial for recovering funds from a specific derivation path. [4/11] 
+> 
+> ![1754965707312529810-GFrjogfbMAAyFU4]({{ site.url }}{{ site.baseurl }}/assets/images/media/1754965707312529810-GFrjogfbMAAyFU4.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:04 +0000 2024](https://twitter.com/ChristopherA/status/1754965707312529810)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965704728805758)
+
+> Fundamentally, Gordian Seed Tool is meant as an exemplar of best practices: how to store seeds securely; how to back them them up; how to use them securely. It's also an exemplar for @BlockchainComns developer specifications such as Envelope and SSKR. [3/11]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:04 +0000 2024](https://twitter.com/ChristopherA/status/1754965705899077769)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965702698840435)
+
+> Gordian Seed Tool is not a crypto-wallet. It's a seed vault: a place to store your cryptographic secrets. But it can also be used to sign PSBTs or to output keys to wallets. [2/11]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:04 +0000 2024](https://twitter.com/ChristopherA/status/1754965704728805758)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965709636153823)
+
+> The newest version of Gordian Seed Tool also makes improvements to hex, BIP39, and Bytewords entry. These are equally crucial methods for recovering data, and we want to encourage strong ease-of-use for the entry methods. [6/10]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:05 +0000 2024](https://twitter.com/ChristopherA/status/1754965710839984617)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965707312529810)
+
+> It also shows how data elision works in Envelope. If there's too much content for a specific storage medium, metadata is elided (and can hopefully be recovered from a different share or backup). [5/10]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:05 +0000 2024](https://twitter.com/ChristopherA/status/1754965709636153823)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965713637322960)
+
+> We've added support for other chains. We default to Bitcoin keys, but support Ethereum, Tezos (tz1) addresses from a single seed! [8/11]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:06 +0000 2024](https://twitter.com/ChristopherA/status/1754965715151737180)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965710839984617)
+
+> Gordian Seed Tool now also shows lifehashes of master fingerprints, as another guidance for users recognizing seeds. [7/10] https://lifehash.info/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:06 +0000 2024](https://twitter.com/ChristopherA/status/1754965713637322960)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965718343598384)
+
+> To support this sort of continued work, to empower users and wallet manufacturers alike, please become a @BlockchainComns sponsor. [10/11] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:07 +0000 2024](https://twitter.com/ChristopherA/status/1754965719656419575)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965716712018078)
+
+> If you are a wallet developer, you can get an insider's look at Gordian Seed Tool by attending our Gordian Developer Meeting Wednesday at 10am PT (1pm ET, 7pm CET). Sign up for our Signal or ask me for a link. [10/11] https://www.blockchaincommons.com/subscribe/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:07 +0000 2024](https://twitter.com/ChristopherA/status/1754965718343598384)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1754965715151737180)
+
+> Gordian Seed Tool 1.6 has more than half-a-year's advances in specifications, best practices, and other expansions. If you have an iOS device, take a look. It's free for a few days! [9/11] https://apps.apple.com/us/app/gordian-seed-tool/id1545088229
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:30:07 +0000 2024](https://twitter.com/ChristopherA/status/1754965716712018078)
+
+----
+
+> RT @tropicsquare: Joining together with others who believe in and are working towards better security at a microchip level is how we’re mov…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 07 22:06:13 +0000 2024](https://twitter.com/ChristopherA/status/1755352289257414946)
+
+----
+
+> RT @henkvancann: Musings of a Trust Architect: Progressive Trust https://www.blockchaincommons.com/musings/musings-progressive-trust/ via @BlockchainComns  
+> An interesting stance on 'sec…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 08 23:12:15 +0000 2024](https://twitter.com/ChristopherA/status/1755731297832714273)
+
+----
+
+Replying to [@lopp](https://twitter.com/lopp/status/1756529929775104132)
+
+> Besides @BlockchainComns offering a number of our services via Tor (an Esplora and a SpotBit) and offer source code that leverage TorGaps, we also worked with @TheBlueMatt to offer an Tor exit node.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 11 06:59:37 +0000 2024](https://twitter.com/ChristopherA/status/1756573689632715012)
+
+----
+
+> RT @uvlstudios: Presenting our new AI short film for the #gen48 contest by @runwayml   
+>   
+> Meet Ellie, a video game character who's been left b…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 12 04:11:02 +0000 2024](https://twitter.com/ChristopherA/status/1756893648741081393)
+
+----
+
+> RT @natynettle: European Court of Human Rights unequivocally protects encryption! 👏🏽  
+>   
+> Today, the Court ruled in Podchasov v. Russia that fo…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 15 20:42:46 +0000 2024](https://twitter.com/ChristopherA/status/1758230391943758045)
