--- a/_tweets-md/2024/2024-03-01-tweets.md
+++ b/_tweets-md/2024/2024-03-01-tweets.md
@@ -1,6 +1,437 @@
----    
-title: "Social Media - March"
-date: "2024-03-31"
-time:  23:59:59 +0000
----
+> RT @zooko: It’s the 31st anniversary of the publication of “A Cypherpunk’s Manifesto” by Eric Hughes. It is a very relevant and important d…
 
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 11 13:10:47 +0000 2024](https://twitter.com/ChristopherA/status/1767176344994296042)
+
+----
+
+Replying to [@bitgeiniog, @BitcoinErrorLog and @bordalix](https://twitter.com/bitgeiniog/status/1767321570467368996)
+
+> DID: BTCR was really the first DID method https://w3c-ccg.github.io/didm-btcr/ There is also a good podcast on it at https://rubric.cc/podcast/the-granddaddy-of-dids/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 11 22:58:03 +0000 2024](https://twitter.com/ChristopherA/status/1767324132801450278)
+
+----
+
+> RT @phil_h: Avec @fredericmartinx, nous publions aujourd'hui sur le site d'@EthereumFr le plaidoyer de @ChristopherA en faveur de l'identit…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Mar 12 17:19:29 +0000 2024](https://twitter.com/ChristopherA/status/1767601317726527721)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857163323224477)
+
+> Foremembrance Day marks the day in 1943 that the Resistance in the Netherlands tried to destroy the identity registry archives in Amsterdam, to protect the populace from the occupying Nazis. [2/12] https://www.annefrank.org/en/timeline/128/the-resistance-attacks-the-population-register-of-amsterdam/ 
+> 
+> ![1770857165848244592-GJNOiPeWIAABaZn]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857165848244592-GJNOiPeWIAABaZn.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:03 +0000 2024](https://twitter.com/ChristopherA/status/1770857165848244592)
+
+----
+
+> Next Wednesday, March 27 is #Foremembrance Day. Join me here for a Livestream just before the sun sets over Amsterdam (11am PT, 2pm ET, 7pm CET). I'll be talking about the dangers of correlated identity, and some lessons from history. [1/11] https://twitter.com/i/broadcasts/1MnxnMLyEPBJO
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:03 +0000 2024](https://twitter.com/ChristopherA/status/1770857163323224477)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857165848244592)
+
+> The resistance was only somewhat successful. Though they set fires in the registry, 85% of the identity data was restored by the Dutch civil service. Most of the resistance members were then murdered by Nazis on July 2. [3/12] 
+> 
+> ![1770857169107259871-GJNL2hfW4AEjiqH]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857169107259871-GJNL2hfW4AEjiqH.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:04 +0000 2024](https://twitter.com/ChristopherA/status/1770857169107259871)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857169107259871)
+
+> Because of the Netherlands' extensive compilation and correlation of data, 75% of the Jews in the country were  killed during the Holocaust. [4/12] https://twitter.com/trbouma/status/1222863239744311296 
+> 
+> ![1770857172663988632-GJNLpUDXAAESQFJ]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857172663988632-GJNLpUDXAAESQFJ.webp)
+> 
+> ![1770857172663988632-GJNLwJlWMAAVv8H]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857172663988632-GJNLwJlWMAAVv8H.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:05 +0000 2024](https://twitter.com/ChristopherA/status/1770857172663988632)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857172663988632)
+
+> The correlated data was enabled by a man named Jacobus L. Lentz, who wrote the book on Personal Identity, who saw it as a tool without seeing its dangers. It didn't have to be that way! [5/12] 
+> 
+> ![1770857176518574219-GJNMTW5XkAAOXLc]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857176518574219-GJNMTW5XkAAOXLc.webp)
+> 
+> ![1770857176518574219-GJNMiCNWkAA1VfF]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857176518574219-GJNMiCNWkAA1VfF.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:06 +0000 2024](https://twitter.com/ChristopherA/status/1770857176518574219)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857176518574219)
+
+> It wasn't that way in France where a different identity architect, René Carmille, took a very different path. He purposefully sabotaged the census of the Jews while simultaneously compiling a listing of 800,000 French soldiers ready to rise up against the German occupation [6/12] 
+> 
+> ![1770857179232219270-GJNMJBCXUAAWozZ]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770857179232219270-GJNMJBCXUAAWozZ.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:07 +0000 2024](https://twitter.com/ChristopherA/status/1770857179232219270)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857183216865674)
+
+> If you'd like to read about the topic right now, I written more in "Echoes from History", an introduction to a full book on "Foremembrance" I am working on. [8/12] https://www.blockchaincommons.com/articles/echoes-history/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:08 +0000 2024](https://twitter.com/ChristopherA/status/1770857184961638772)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857179232219270)
+
+> I'll talk about these two men and their historical roles in personal identity in a 5-minute presentation on Wed, March 27, followed by a minute of silence at Amsterdam sunset (7:07p CEST) and an open discussion on how to make identity safer TODAY. [7/12] https://twitter.com/i/broadcasts/1MnxnMLyEPBJO
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:08 +0000 2024](https://twitter.com/ChristopherA/status/1770857183216865674)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857187406954499)
+
+> If you happen to be in the Netherlands next week, this plaque is just outside the Amsterdam Zoo's Cafe at Plantage Kerklaan 36, 1018 CZ Amsterdam, Netherlands. I'd love to have some photos at sunset (7:07 CEST) of anyone gathered there. [11/12]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:09 +0000 2024](https://twitter.com/ChristopherA/status/1770857190049366077)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857184961638772)
+
+> Another excellent resource on the subject of collecting data: "The Dark Side of Numbers: The Role of Population Data Systems in Human Rights Abuses" by @wseltzer and @margo_shehers [10/11] https://www.jstor.org/stable/40971467
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:09 +0000 2024](https://twitter.com/ChristopherA/status/1770857187406954499)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857192041640227)
+
+> 👆I hope you can join for #Foremembrance: @silicondomme @joncallas @hackylawyER @katherineykwu @internetfreedom @EFF @AnnCavoukian @wseltzer0731 @mer__edith @angela_walch @lukOlejnik @karen_ec_levy @snowjake @shoshanazuboff @La__Cuen @WouterWelling @NachoAlamillo
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:10 +0000 2024](https://twitter.com/ChristopherA/status/1770857194289791054)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1770857190049366077)
+
+> The mission of @BlockchainComns is for an open, interoperable, secure &amp; compassionate digital infrastructure to enable people to control their own digital destiny and to maintain their human dignity online. Support us at https://github.com/sponsors/BlockchainCommons [12/12]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 16:57:10 +0000 2024](https://twitter.com/ChristopherA/status/1770857192041640227)
+
+----
+
+> RT @PrivacyMatters: https://t.co/nMULqX2AIo
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:26:23 +0000 2024](https://twitter.com/ChristopherA/status/1770924945067151818)
+
+----
+
+> RT @mer__edith: Great thread for those interested in why I'm a big fan of ethical sabotage in tech.   
+>   
+> Tl;dr -- the best way to preserve pri…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:27:23 +0000 2024](https://twitter.com/ChristopherA/status/1770925195802681413)
+
+----
+
+Replying to [@mer__edith and @WebDevLaw](https://twitter.com/mer__edith/status/1770868615979442280)
+
+> Arondeus led the sabotage of the archives that we are commemorating next Wednesday. I talk about quite a bit more about Arondeus, and other early LGTBQ+ support of the Jews in my book draft. But my main point is Lenz &amp; Carmille both led identity systems, with different results. 
+> 
+> ![1770927877011165589-GJOZgenaUAAnAt1]({{ site.url }}{{ site.baseurl }}/assets/images/media/1770927877011165589-GJOZgenaUAAnAt1.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:38:02 +0000 2024](https://twitter.com/ChristopherA/status/1770927877011165589)
+
+----
+
+> RT @KuypersMarieke: @mer__edith Resistance member Frieda Belinfante was a part of the group that attacked the registry and one of the few t…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:38:39 +0000 2024](https://twitter.com/ChristopherA/status/1770928032003326407)
+
+----
+
+Replying to [@mer__edith](https://twitter.com/mer__edith/status/1770858346297389415)
+
+> We presented at IETF-Brisbane this week about being disappointed that RFCs on Privacy &amp; Human Rights were only advice, not mandates, and needed updates. We also suggested that IETF needed a WH on data elision / selective disclosure. Answer was “not needed”.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:45:17 +0000 2024](https://twitter.com/ChristopherA/status/1770929698987471354)
+
+----
+
+Replying to [@mer__edith](https://twitter.com/ChristopherA/status/1770929698987471354)
+
+> Here is our presentation to IETF that failed, the topic of whch maps to @mer__edith’s quote “Tl;dr -- the best way to preserve privacy is not to collect data. The second best way is to destroy the data.”  
+>   
+> https://github.com/BlockchainCommons/Gordian-Developer-Community/tree/master/meetings/2024/03-18
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:47:56 +0000 2024](https://twitter.com/ChristopherA/status/1770930367392063911)
+
+----
+
+Replying to [@mer__edith](https://twitter.com/ChristopherA/status/1770930367392063911)
+
+> The specific problem requirements IETF internet-draft that we proposed is at https://datatracker.ietf.org/doc/draft-appelcline-hashed-elision/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:49:24 +0000 2024](https://twitter.com/ChristopherA/status/1770930736704704725)
+
+----
+
+Replying to [@mer__edith](https://twitter.com/ChristopherA/status/1770930736704704725)
+
+> We also having a working proof-of-concept with radical improvements to minimal disclosure best practices using basic hash-tree-based elision, with architecture that supports options for signature anti-correlation. IETF internet-draft at https://datatracker.ietf.org/doc/draft-mcnally-envelope/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:53:24 +0000 2024](https://twitter.com/ChristopherA/status/1770931744440529168)
+
+----
+
+> RT @ChristopherA: @mer__edith We presented at IETF-Brisbane this week about being disappointed that RFCs on Privacy &amp; Human Rights were onl…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:56:03 +0000 2024](https://twitter.com/ChristopherA/status/1770932407836766361)
+
+----
+
+> RT @ChristopherA: @mer__edith Here is our presentation to IETF that failed, the topic of whch maps to @mer__edith’s quote “Tl;dr -- the bes…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:56:07 +0000 2024](https://twitter.com/ChristopherA/status/1770932424538529840)
+
+----
+
+> RT @ChristopherA: @mer__edith The specific problem requirements IETF internet-draft that we proposed is at https://datatracker.ietf.org/doc/draft-appelcline-hashed-elision/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:56:10 +0000 2024](https://twitter.com/ChristopherA/status/1770932437855477927)
+
+----
+
+> RT @ChristopherA: @mer__edith We also having a working proof-of-concept with radical improvements to minimal disclosure best practices usin…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:56:14 +0000 2024](https://twitter.com/ChristopherA/status/1770932454695563532)
+
+----
+
+> RT @AaronvanW: The Genesis Book review by former DigiCash employee Jurjen Bos.  
+>   
+> https://medium.com/@jnebos/i-thought-i-understood-bitcoin-until-now-07e064c4ba7a
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 21 21:58:10 +0000 2024](https://twitter.com/ChristopherA/status/1770932941712986582)
+
+----
+
+> RT @KimZetter: Newly discovered vuln in Apple M-series chips lets attackers extract secret keys from Macs. "The flaw—a side channel allowin…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 22 02:23:34 +0000 2024](https://twitter.com/ChristopherA/status/1770999733848572063)
+
+----
+
+> This is why @BlockchainComns is so focused on multisig &amp; threshold quorum choices for keys, recovery resilience. Also why interoperability is so important, as no keys are on one class of hardware. When there are no Single Points of Compromise (SPoC) or Failure (SPoF) no attack. https://twitter.com/KimZetter/status/1770869722760061195
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 22 02:27:57 +0000 2024](https://twitter.com/ChristopherA/status/1771000835067306173)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1771000835067306173)
+
+> If you are a wallet developer, here is more on the technologies multiple wallet vendors are beginning to deploy this year: https://developer.blockchaincommons.com/seedrecovery/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 22 02:30:49 +0000 2024](https://twitter.com/ChristopherA/status/1771001558182031526)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1771001558182031526)
+
+> In the meantime, our current safest multisig scenario that works now is at https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 22 02:31:58 +0000 2024](https://twitter.com/ChristopherA/status/1771001846376857799)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1771001846376857799)
+
+> It takes over an hour and requires attention to detail, so is full of checklists. However, we have a strategy to make it easier using QR or NFC response &amp; request. Here is a paper on how the process will be so much easier when wallet developers start using it:…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 22 02:34:58 +0000 2024](https://twitter.com/ChristopherA/status/1771002603088077126)
+
+----
+
+> I'll be streaming live on http://X.com tomorrow at 7pm CEST (sunset in Amsterdam, 1pm EDT, 11am PDT) on the 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis. Join me for a moment of silence &amp; discussion. https://twitter.com/ChristopherA/status/1770857165848244592
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Mar 26 15:51:08 +0000 2024](https://twitter.com/ChristopherA/status/1772652516674551849)
+
+----
+
+> I've posted more specific details about the attempt, 81 years ago today, by the Dutch Resistance in WWII destroy the Civil Archives and population registry, which was led by the Amsterdam LGBT+ community to protect the Jews and other undesirables: https://forum.rpg.net/index.php?threads/foremembrance-2024-echoes-from-wwii-history-about-identity-today-lgbt-connections.918503/ https://twitter.com/ChristopherA/status/1770857163323224477
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 16:48:58 +0000 2024](https://twitter.com/ChristopherA/status/1773029457680359759)
+
+----
+
+Replying to [@mer__edith and @WebDevLaw](https://twitter.com/mer__edith/status/1770868615979442280)
+
+> Laura “Lau” Mazirel, an advocate of LGBT+ &amp; Romani “Gypsy” rights, visited Willem Arondeus in prison not long before his execution. He had only one request to make of her: “tell the world that gays are no less courageous than anyone else.” https://forum.rpg.net/index.php?threads/foremembrance-2024-echoes-from-wwii-history-about-identity-today-lgbt-connections.918503/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 17:40:54 +0000 2024](https://twitter.com/ChristopherA/status/1773042525273473140)
+
+----
+
+> RT @ChristopherA: @mer__edith @WebDevLaw Laura “Lau” Mazirel, an advocate of LGBT+ &amp; Romani “Gypsy” rights, visited Willem Arondeus in pris…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 17:41:27 +0000 2024](https://twitter.com/ChristopherA/status/1773042664209776989)
+
+----
+
+> Join me now LIVE in #Foremembrance, to commemorate and offer a moment of silence on this 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis. The future of digital identity lies in our hands. https://twitter.com/i/broadcasts/1MnxnMLyEPBJO
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 18:00:00 +0000 2024](https://twitter.com/ChristopherA/status/1773047332923408733)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1773047332923408733)
+
+> We will move to Zoom afterwards (~10m after the hour) at https://us02web.zoom.us/s/84797789485
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 18:00:28 +0000 2024](https://twitter.com/ChristopherA/status/1773047450263003291)
+
+----
+
+> We are in zoom live NOW, if you would like to talk about the #Foremembrance story, digital identity and human rights, etc. https://us02web.zoom.us/s/84797789485
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 18:17:40 +0000 2024](https://twitter.com/ChristopherA/status/1773051779896254821)
+
+----
+
+> A video (11m) of #Foremembrance and the moment-of-silence commemorating the 81st anniversary of the attempt by the WWII Dutch Resistance to destroy the identity records held by the Nazis, is now available at https://www.youtube.com/watch?v=R9KuIlAg4wg
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 20:20:36 +0000 2024](https://twitter.com/ChristopherA/status/1773082717564862811)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1773082717564862811)
+
+> Original thread: https://twitter.com/ChristopherA/status/1770857165848244592
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 27 20:20:37 +0000 2024](https://twitter.com/ChristopherA/status/1773082719125156205)
+
+----
+
+> If this bill has legs it would be quite concerning. https://twitter.com/jess_miers/status/1772792624925303275
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 06:03:31 +0000 2024](https://twitter.com/ChristopherA/status/1773229410151264294)
+
+----
+
+> RT @AnomalRoil: @secparam presenting the (ambitious) goals they tackled with their zk-creds systems 🤯#realworldcrypto This is great for mov…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 06:10:29 +0000 2024](https://twitter.com/ChristopherA/status/1773231164653711482)
+
+----
+
+> 🔎 “The right is fighting to take control of these platforms, while liberals and some on the left are fighting to expand vectors of platform control, without thinking hard enough about who will wield this power and who is likely to get hurt.” — @mer__edith https://twitter.com/mer__edith/status/1773344682375852408
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 15:54:08 +0000 2024](https://twitter.com/ChristopherA/status/1773378043941421417)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1773047332923408733)
+
+> An unfortunate typo got into the slides and recording, which I also read aloud. It was René Carmille that hid the 100,000 cards of French Jews. Here is the corrected slide: 
+> 
+> ![1773389950693585000-GJxVU3tawAABiBH]({{ site.url }}{{ site.baseurl }}/assets/images/media/1773389950693585000-GJxVU3tawAABiBH.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 16:41:26 +0000 2024](https://twitter.com/ChristopherA/status/1773389950693585000)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1773389950693585000)
+
+> I'm still puzzling on how best to tell Carmille's story, as some details have been lost, and there are still questions. Two links, and one book, in particular I have used as sources: https://daily.jstor.org/wwii-and-the-first-ethical-hacker/; https://muse.jhu.edu/pub/1/oa_monograph/chapter/70972; "A Quiet Hero" by Dwight Harshbarge
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 16:41:27 +0000 2024](https://twitter.com/ChristopherA/status/1773389953893839108)
+
+----
+
+> Cellular data used to correlate visitors to Epstein's island demonstrates the double-edged sword of surveillance tech. While it can expose wrongdoing, it raises critical #RightToPrivacy concerns for everyday citizens. How do we balance the need for justice with #FreedomToAssemble… https://twitter.com/WIRED/status/1773304396400545947
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 20:24:39 +0000 2024](https://twitter.com/ChristopherA/status/1773446122964717939)
+
+----
+
+Replying to [@clayforsberg](https://twitter.com/clayforsberg/status/1773454767639171321)
+
+> As a personal example, my mother lived in St. Thomas, and was a professional sail boat captain taking day charters. On a regular basis, when the winds were from a particular direction, she would take her guests to the waters of close in to the lee side of his island to snorkel.…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 28 22:27:46 +0000 2024](https://twitter.com/ChristopherA/status/1773477108313964743)
+
+----
+
+> RT @ekr____: Now up on the newsletter, a look at design choices for deploying post-quantum algorithms for TLS (mostly on the Web).  
+>   
+> https:/…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Mar 31 05:11:46 +0000 2024](https://twitter.com/ChristopherA/status/1774303552309256250)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680107380048144)
+
+> The presentation will be by @jesseposner, Senior Blockchain Engineer at Block, who is working on the secp/ZKP FROST project [2/8] https://github.com/BlockstreamResearch/secp256k1-zkp/pull/138
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:04 +0000 2024](https://twitter.com/ChristopherA/status/1774680108927742113)
+
+----
+
+> Want to know more about FROST, the Schnorr signature scheme that enables threshold sigs and more? @BlockchainComns will have an online presentation this Wednesday, April 3rd at 10am PT. [1/8] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/2024/04-03/frost-meeting.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:04 +0000 2024](https://twitter.com/ChristopherA/status/1774680107380048144)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680112304103599)
+
+> It also leverages VSS (Verifiable Secret Sharing), which is useful in other ways as it allows you to verify the existence of backup shares without the risks of reconstructing then. [5/8] https://developer.blockchaincommons.com/ckm/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:05 +0000 2024](https://twitter.com/ChristopherA/status/1774680113658929232)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680110760611905)
+
+> FROST is particular powerful as it enables Distributed Key Generation (DKG), where a key never actually exists on a single computer! Instead, it exists in a kind of network "fog" that only exists when a quorum of participants are working tegether. [4/8]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:05 +0000 2024](https://twitter.com/ChristopherA/status/1774680112304103599)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680108927742113)
+
+> FROST is a massive advance in cryptographic technology, in particular for Bitcoin as supports signature aggregation, where a multisig and a single sig look identical. [3/8] https://developer.blockchaincommons.com/frost/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:05 +0000 2024](https://twitter.com/ChristopherA/status/1774680110760611905)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680117207257291)
+
+> Become a sponsor of @BlockchainComns to ensure our continued work in toward #SmartCustody for end-users and our support for digital-asset wallets developers. We need your ongoing help! [8/8] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:06 +0000 2024](https://twitter.com/ChristopherA/status/1774680118742438018)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680115152040199)
+
+> Sign up for our Gordian Developers list to receive announcements of all of our Bitcoin developer an digital-asset wallet developer focused events. [7/8] https://www.blockchaincommons.com/subscribe/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:06 +0000 2024](https://twitter.com/ChristopherA/status/1774680117207257291)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1774680113658929232)
+
+> If you're a wallet developer, or just interested in the future of Schnorr for Bitcoin, join us this Wednesday April 3rd at 10am PT (1pm ET, 7pm CET) for a presentation that explains all. [6/8] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/2024/04-03/frost-meeting.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 01 06:08:06 +0000 2024](https://twitter.com/ChristopherA/status/1774680115152040199)
