--- a/_tweets-md/2024/2024-08-01-tweets.md
+++ b/_tweets-md/2024/2024-08-01-tweets.md
@@ -1,6 +1,430 @@
----    
-title: "Social Media - August"
-date: "2024-08-31"
-time:  23:59:59 +0000
----
+> RT @n1ckler: ChillDKG finally has a sister BIP that specifies the signing part of FROST! The draft already has reference implementation &amp; t…
 
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 01:54:46 +0000 2024](https://twitter.com/ChristopherA/status/1819190071154860195)
+
+----
+
+> Our 2nd FROST Implementors Roundtable will be on Sept 18th for cryptographers, protocol and library devs. Another meeting on Dec 4th will focus on wallet developers integrating these tools. If you would like to present at either meeting, let me know. https://developer.blockchaincommons.com/frost
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:08:28 +0000 2024](https://twitter.com/ChristopherA/status/1819223717903585744)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1819223720226906425)
+
+> Details, video and transcripts from our 1st FROST Implementor's meeting is at https://developer.blockchaincommons.com/frost/meeting1/, and our 1st FROST wallet devs meeting at https://developer.blockchaincommons.com/frost/developers1/. Many thanks to the Human Rights Foundation (@HRF) for sponsoring these events.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:08:29 +0000 2024](https://twitter.com/ChristopherA/status/1819223721972060427)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1819223717903585744)
+
+> So far we have presenter’s confirmed more from the Bitcoin side of FROST, but we hope to have other library implementors present, in particular from @ZcashFoundation's FROST implementation to update us on their work and progress with IETF and NIST standards.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:08:29 +0000 2024](https://twitter.com/ChristopherA/status/1819223720226906425)
+
+----
+
+Replying to [@vazertuche](https://twitter.com/vazertuche/status/1799557285418578090)
+
+> https://x.com/ChristopherA/status/1819223717903585744
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:09:15 +0000 2024](https://twitter.com/ChristopherA/status/1819223913488175236)
+
+----
+
+Replying to [@jonf3n, @BlockchainComns and @Ledger](https://twitter.com/jonf3n/status/1650922639941042176)
+
+> This is now officially available in the approved apps for Ledger. Dev mode no longer required https://twitter.com/ChristopherA/status/1816517209298268532
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 02 04:29:55 +0000 2024](https://twitter.com/ChristopherA/status/1819229116325130249)
+
+----
+
+> RT @jonf3n: This is great news!  
+> #SSKR is what #SLIP39 should have been... I really hope @satoshilabs will consider supporting SSKR in the f…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 04 20:16:40 +0000 2024](https://twitter.com/ChristopherA/status/1820192149683773905)
+
+----
+
+Replying to [@jonf3n, @BlockchainComns and @Ledger](https://twitter.com/jonf3n/status/1820073687774531742)
+
+> Several other wallet devs have considered it, but were put off by SLIP-39. Hopefully there will now be more momentum.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 04 20:18:18 +0000 2024](https://twitter.com/ChristopherA/status/1820192558229954954)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394209821831336)
+
+> As hardware wallets proliferate, as multisigs come into increased use, and as digital currencies become more commonplace, you'll likely need more than one seed for your assets. BIP-85 is one way to manage that. [2/7]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:35 +0000 2024](https://twitter.com/ChristopherA/status/1820394211163988400)
+
+----
+
+> As a reminder, the special @BlockchainComns BIP-85 presentation for wallet developers is coming up this Wednesday, the 7th. [1/7] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:35 +0000 2024](https://twitter.com/ChristopherA/status/1820394209821831336)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394213801882070)
+
+> Ensuring users don't lose their digital assets is one of the most challenging elements of self-sovereign asset control. It's been one of the priorities at @BlockchainComns from the start. [5/7] https://www.smartcustody.com/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:36 +0000 2024](https://twitter.com/ChristopherA/status/1820394215387681217)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394212376101178)
+
+> We'll also talk about other ways to improve seed resilience at our meeting:  Sharded Secret Key Reconstruction (SSKR), Collaborative Seed Recovery (CSR), Gordian Depository, etc. The link (below) has the URL for the meeting  and calendar invite. [4/7] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:36 +0000 2024](https://twitter.com/ChristopherA/status/1820394213801882070)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394211163988400)
+
+> BIP-85 specifies how to generate children seed from a master seed, so you can have “One Seed to rule them all”. [3/7] https://github.com/bitcoin/bips/blob/master/bip-0085.mediawiki
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:36 +0000 2024](https://twitter.com/ChristopherA/status/1820394212376101178)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394216599805958)
+
+> If self-sovereign control over digital assets is important to you, or if you just want to make digital-asset wallets better, become a patron of @BlockchainComns. [7/7] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:37 +0000 2024](https://twitter.com/ChristopherA/status/1820394217874592176)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820394215387681217)
+
+> Subscribe to our announcements-only list to learn about the topics of our wallet developers meeting every month! [6/7]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 09:39:37 +0000 2024](https://twitter.com/ChristopherA/status/1820394216599805958)
+
+----
+
+Replying to [@BitcoinLixin, @zcash and @jswihart](https://twitter.com/BitcoinLixin/status/1820472493024657642)
+
+> I’ve been trying to get the  Zcash wallet dev community to be involved in Gordian Wallet standards, including UR PSBTs, SSKR and other seed resilience best practices, etc. Any endorsement of these to encourage them is appreciated.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 05 20:00:21 +0000 2024](https://twitter.com/ChristopherA/status/1820550429945811263)
+
+----
+
+> I’ve been talking about wallet key exfiltration attacks since first heard about them from @pwuille in 2018. There just hasn’t been demand because it required wallets to keep state. This is exactly what our Gordian Sealed Transport Protocol (GSTP) addresses with its Encapsulated… https://twitter.com/ChristopherA/status/1651308417187999745
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:27:34 +0000 2024](https://twitter.com/ChristopherA/status/1820662975495364804)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820662975495364804)
+
+> https://x.com/christophera/status/1550125898686353411 https://twitter.com/ChristopherA/status/1550125898686353411
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:28:45 +0000 2024](https://twitter.com/ChristopherA/status/1820663275136377038)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820663275136377038)
+
+> https://twitter.com/christophera/status/1811438557011353658
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:31:07 +0000 2024](https://twitter.com/ChristopherA/status/1820663868701700306)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820663868701700306)
+
+> Here is the point in our video on GSTP (at 14m38s) where we talk about  Encapsulated State Continuation in GSTP: https://youtu.be/QnH14LkJOnI?si=STish-xNcW-9ZggV&t=877
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:36:33 +0000 2024](https://twitter.com/ChristopherA/status/1820665238015873484)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1820665238015873484)
+
+> Basically, with GSTP and ESC, a wallet transaction coordinator can contribute toward a nonce and send it to the hardware wallet, along with encrypted state. The signer incorporates that nonce, and returns it along with the encrypted continuation, which the coordinator can then…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:42:45 +0000 2024](https://twitter.com/ChristopherA/status/1820666797298970800)
+
+----
+
+> RT @ChristopherA: Basically, with GSTP and ESC, a wallet transaction coordinator can contribute toward a nonce and send it to the hardware…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 03:42:51 +0000 2024](https://twitter.com/ChristopherA/status/1820666821852418365)
+
+----
+
+Replying to [@TheBlueMatt](https://twitter.com/TheBlueMatt/status/1820787293411582296)
+
+> https://x.com/christophera/status/1820662975495364804?s=46&t=ePUcgPP2MpmlY7AiPMPAZg https://twitter.com/ChristopherA/status/1820662975495364804
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 17:50:28 +0000 2024](https://twitter.com/ChristopherA/status/1820880133559124270)
+
+----
+
+Replying to [@Stadicus3000](https://twitter.com/Stadicus3000/status/1820556338503500080)
+
+> https://x.com/christophera/status/1820662975495364804?s=46&t=ePUcgPP2MpmlY7AiPMPAZg https://twitter.com/ChristopherA/status/1820662975495364804
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 06 17:50:48 +0000 2024](https://twitter.com/ChristopherA/status/1820880217881375022)
+
+----
+
+Replying to [@JamesLucasIT](https://twitter.com/JamesLucasIT/status/1820874353598152869)
+
+> There is an argument that the “all roads lead to Rome” is actually about Constantinople, as it was called Rome once. I wonder what this map would look like centered there?
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 07 03:12:40 +0000 2024](https://twitter.com/ChristopherA/status/1821021615477682505)
+
+----
+
+> RT @ericgeller: "He then took a position that he noted was 'controversial' among Holocaust scholars: that the Holocaust should not be taugh…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 06:03:03 +0000 2024](https://twitter.com/ChristopherA/status/1821426879930433778)
+
+----
+
+> RT @akarve: Tech talk on cryptographic keychains with @BlockchainComns who are doing essential work on secret self-custody.  
+>   
+> If you wish to…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:12:50 +0000 2024](https://twitter.com/ChristopherA/status/1821580336662548836)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581666428842428)
+
+> Blockchain Commons in our #SmartCustody efforts has done a lot to support the resilience of seeds , so they won't be lost, as we think that's the number one adversary for most self-sovereign digital-asset holders. But there are new approaches emerging. [2/9]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:07 +0000 2024](https://twitter.com/ChristopherA/status/1821581668249153664)
+
+----
+
+> This month's Gordian Developer Meeting (first Wednesday) hosted by @BlockchainComns  was all about seed resilience. It's the vitally important "Level 0" for cryptographic security. We've got a video of the complete discussion [1/9]. https://www.youtube.com/watch?v=e6Ag1X2oC1Y
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:07 +0000 2024](https://twitter.com/ChristopherA/status/1821581666428842428)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581670279254415)
+
+> Blockchain Commons hasn't focused on BIP-85 much to date, but it's starting to gain momentum, with implementations from people like @FOUNDATIONdvcs and @COLDCARDwallet. We think it deserves more attention in the future! [4/9]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:08 +0000 2024](https://twitter.com/ChristopherA/status/1821581672535740842)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581668249153664)
+
+> One is BIP-85, a seed-of-seeds methodology that lets you use one seed to generate seeds for all of your devices. @akarve, a BIP-85 Champion, gave a presentation on the topic. [3/9] https://www.youtube.com/watch?v=4W4kmV-oHrA
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:08 +0000 2024](https://twitter.com/ChristopherA/status/1821581670279254415)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581674213421475)
+
+> The Ledger Seed Tool app has been security-reviewed by Ledger and is available through Ledger Live. [6/9] https://www.ledger.com/blog/seed-tool-app
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:09 +0000 2024](https://twitter.com/ChristopherA/status/1821581677145321615)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581672535740842)
+
+> Another new seed-related innovation actually built on our own work. Aido has released Ledger Seed Tool, which brings Shamir's Secret Sharing to Ledger using our own SSKR. Here's his presentation. [5/9] https://www.youtube.com/watch?v=2GjnZjZloec
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:09 +0000 2024](https://twitter.com/ChristopherA/status/1821581674213421475)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581679246622843)
+
+> Join @BlockchainComns to talk about these futures and more by signing up to receive announcements about *next* month's wallet developers meeting (September 4th). [8/9] https://www.blockchaincommons.com/subscribe/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:10 +0000 2024](https://twitter.com/ChristopherA/status/1821581680769139107)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581677145321615)
+
+> There are lots of interesting futures for seeds. BIP-85, various cryptocurrency key derivations, online backup mechanisms like our own Gordian Depository, NFC backups, Distributed Key Generation, MuSig2, FROST ... [7/9]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:10 +0000 2024](https://twitter.com/ChristopherA/status/1821581679246622843)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1821581680769139107)
+
+> Support our work on improving the resilience and security of not just seeds, but all the digital assets they protect, by becoming a GitHub sponsor. [9/9] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 08 16:18:11 +0000 2024](https://twitter.com/ChristopherA/status/1821581682371395853)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508559566705124)
+
+> Why use Gordian Envelope? The fundamental reason is hashed elision. It empowers Data Minimization, allowing any holder of data to redact data that should be private, while still maintaining validation &amp; integrity. The video explains more! [2/11]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:54 +0000 2024](https://twitter.com/ChristopherA/status/1823508560988528959)
+
+----
+
+> Gordian Envelope is a Smart Document system that supports secure data storage and holder-based elision. We've created a new "Understanding Gordian Envelope" video that introduces the technology. [1/11] https://www.youtube.com/watch?v=-vcLCFKQvik&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:54 +0000 2024](https://twitter.com/ChristopherA/status/1823508559566705124)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508563798712385)
+
+> Gordian Envelope Extensions allow you to do more! Signing, encryption, compression, remote functions, it's all here. But you only pay for what you use! Envelope can be as simple or complex as you need. [5/11]]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:55 +0000 2024](https://twitter.com/ChristopherA/status/1823508565283495937)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508562360127747)
+
+> Part two of "Understanding Gordian Envelope" then looks at Envelope's Extensions. [4/11] https://www.youtube.com/watch?v=uFxStP3ATkw&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:55 +0000 2024](https://twitter.com/ChristopherA/status/1823508563798712385)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508560988528959)
+
+> Part one of the video focuses on the Envelope metaphor and key concepts such as cryptographic hashes, elision and redaction, determinism, and dCBOR. It also talks about how data is represented in an Envelope. [3/11] https://www.youtube.com/watch?v=-vcLCFKQvik&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:55 +0000 2024](https://twitter.com/ChristopherA/status/1823508562360127747)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508568089493580)
+
+> If you prefer reading to videos, @blockchaincomns also has considerable information about Gordian Envelope on its Developer pages. [8/11] https://developer.blockchaincommons.com/envelope/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:56 +0000 2024](https://twitter.com/ChristopherA/status/1823508569427468687)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508566629867942)
+
+> If you need communication that's secure, transport-agnostic, and distributed, that's GSTP. Whether you communicate via the internet, bluetooth, NFCs, or QRs, GSTP supports the security of your data. [7/11]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:56 +0000 2024](https://twitter.com/ChristopherA/status/1823508568089493580)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508565283495937)
+
+> Many of Gordian Envelope's extensions combine to support Gordian Sealed Transaction Protocol, which was also the subject of a recent video. [6/11] https://www.youtube.com/watch?v=QnH14LkJOnI&list=PLCkrqxOY1Fbqpl8FLvG2uoA2xAMoR0FtS
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:56 +0000 2024](https://twitter.com/ChristopherA/status/1823508566629867942)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508572405424169)
+
+> In order for our work to continue, we need the support of patrons. Please join us! [11/11] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:57 +0000 2024](https://twitter.com/ChristopherA/status/1823508573848264830)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508570819977548)
+
+> Stay up to date with new specifications for data privacy and wallet interoperability by joining the Blockchain Commons announcements-only mailing lists or Signal channels. [10/11] https://www.blockchaincommons.com/subscribe/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:57 +0000 2024](https://twitter.com/ChristopherA/status/1823508572405424169)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1823508569427468687)
+
+> But TL;DR? Envelopes allow users to control what data they send from a larger data store. It's crucial for regulations like HIPAA and GDPR. It allows you to maintain your privacy and keep your data safe! [9/11]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 13 23:54:57 +0000 2024](https://twitter.com/ChristopherA/status/1823508570819977548)
+
+----
+
+> RT @lifeext: Important new privacy work
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 14 02:04:03 +0000 2024](https://twitter.com/ChristopherA/status/1823541062897672301)
+
+----
+
+> RT @WolfMcNally: I’m very excited for the release of these Gordian Envelope explainer videos. I think we’ve invented something truly unique…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 14 02:04:13 +0000 2024](https://twitter.com/ChristopherA/status/1823541103418822948)
+
+----
+
+Replying to [@nigeleccles and @FanDuel](https://twitter.com/nigeleccles/status/1823690889862025268)
+
+> Common pool equity wipeout is far too common. It has happened to me multiple times in both my entrepreneurial and angel experience. Sadly, this means that I and other early-stage investors no longer invest. https://www.lifewithalacrity.com/article/on-being-an-angel/#lessons-from-alacrity-ventures
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 14 18:54:46 +0000 2024](https://twitter.com/ChristopherA/status/1823795416196067505)
+
+----
+
+Replying to [@nvk](https://twitter.com/nvk/status/1823754072517960036)
+
+> Have you seen our work on how Gordian Envelope with Request / Response can significantly improve not only security (by making multisig easer) but also improving the user experience by automating some choices? https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md The ecosystem needs more funding to make this… 
+> 
+> ![1823869470596849885-GU-vet8a4AMkaAB]({{ site.url }}{{ site.baseurl }}/assets/images/media/1823869470596849885-GU-vet8a4AMkaAB.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 14 23:49:02 +0000 2024](https://twitter.com/ChristopherA/status/1823869470596849885)
+
+----
+
+Replying to [@nvk](https://twitter.com/ChristopherA/status/1823869470596849885)
+
+> https://developer.blockchaincommons.com/envelope/gstp/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 15 01:37:09 +0000 2024](https://twitter.com/ChristopherA/status/1823896677964783669)
+
+----
+
+> RT @sjgadler: Think you can tell if a social media account is a bot? What about as AI gets better?  
+>   
+> A new paper—co-authored with researcher…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 16 02:28:59 +0000 2024](https://twitter.com/ChristopherA/status/1824272111495680001)
+
+----
+
+> Put of any good solution is first understanding the problem. A good addition to the literature on Proof of Personhood. (I do still feel that we need more effort to understand risks of over-identification—how can we be the heroes the world needs if every action requires an ID?) https://twitter.com/sjgadler/status/1824245211322568903
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 16 02:33:58 +0000 2024](https://twitter.com/ChristopherA/status/1824273367052300300)
+
+----
+
+> Part of any good solution is first understanding the problem. A good addition to the literature on Proof of Personhood. (I do still feel that we need more effort to understand risks of over-identification—how can we be the heroes the world needs if every action requires an ID?) https://twitter.com/sjgadler/status/1824245211322568903
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 16 02:53:03 +0000 2024](https://twitter.com/ChristopherA/status/1824278167118549106)
+
+----
+
+Replying to [@matthew_d_green](https://twitter.com/matthew_d_green/status/1826736114872512884)
+
+> Not sure it is the highest possible impact, but results of lead poisoning on health,  intelligence, and crime, and key sources of lead including fuel additives could probably fit 12 pages.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 23 06:16:05 +0000 2024](https://twitter.com/ChristopherA/status/1826865977168121990)
+
+----
+
+> RT @naomibrockwell: Before the internet, we had the right to private conversations.  
+>   
+> No one thought the government would be justified putti…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 28 19:56:51 +0000 2024](https://twitter.com/ChristopherA/status/1828884472722604469)
