--- a/_tweets-md/2024/2024-05-01-tweets.md
+++ b/_tweets-md/2024/2024-05-01-tweets.md
@@ -1,5 +1,67 @@
----    
-title: "Social Media - May"
-date: "2024-05-31"
-time:  23:59:59 +0000
----
+> RT @EFF: Police’s ability to ID protestors with face recognition tech makes people "vulnerable to retaliation for their political speech" &amp;…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 03 01:16:54 +0000 2024](https://twitter.com/ChristopherA/status/1786203244144042168)
+
+----
+
+> @sim_kern you might be interested in a related story of the Frenchman René Camille, who perhaps saved 100K Jews in WWII: https://www.lifewithalacrity.com/article/echoes-history/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 10 01:07:29 +0000 2024](https://twitter.com/ChristopherA/status/1788737589467648260)
+
+----
+
+> RT @evacide: This is your regular reminder that metadata matters.  
+>   
+> In this case, the activist was deanonymized via the backup email for the…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 10 01:10:00 +0000 2024](https://twitter.com/ChristopherA/status/1788738225596686605)
+
+----
+
+> RT @dberenzon: 1/ Verifiable Compute is as important of a technological revolution as blockchain itself.  
+>   
+> I've written a piece on the tech,…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 10 01:15:09 +0000 2024](https://twitter.com/ChristopherA/status/1788739521414418629)
+
+----
+
+> RT @mer__edith: Hi, hello, we don’t have evidence of extant vulnerabilities, and haven’t been notified of anything. We follow responsible d…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 10 01:19:26 +0000 2024](https://twitter.com/ChristopherA/status/1788740598943601093)
+
+----
+
+Replying to [@DefuseSec](https://twitter.com/DefuseSec/status/1788440971405152442)
+
+> Your approach might work, but I believe only in limited circumstances. From the perspective of a professional development team, it makes efforts to improve the ecosystem unsustainable. I would not be able to keep and grow the best team.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 10 01:38:11 +0000 2024](https://twitter.com/ChristopherA/status/1788745318420652113)
+
+----
+
+> This DAITA open-source project is interesting and addresses a concern that I’ve had for some time with traffic through Tor exit nodes. It adds anti-correlation features such as constant packet sizes, random background traffic and data pattern distortion. Worthy of investigation🕵🏻‍♂️ https://twitter.com/wilderko/status/1788586071531381225
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 10 02:12:22 +0000 2024](https://twitter.com/ChristopherA/status/1788753917477867921)
+
+----
+
+Replying to [@lopp and @CasaHODL](https://twitter.com/lopp/status/1795435913520308463)
+
+> What do you think about using QR/UR to initiate the creation of descriptors by supporting coordinators ability to ask wallets for public keys? We’ve made progress on underlying protocols for this.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 29 02:50:36 +0000 2024](https://twitter.com/ChristopherA/status/1795648910175903948)
+
+----
+
+Replying to [@lopp and @CasaHODL](https://twitter.com/lopp/status/1795748624233877819)
+
+> We’ve been working with multiple wallet vendors on this. See our overview of benefits of our approach at https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md — code fully demonstrating this in multiple wallets is in progress this summer.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 29 19:58:02 +0000 2024](https://twitter.com/ChristopherA/status/1795907471841915207)
+
+----
+
+> RT @ChristopherA: @lopp @CasaHODL We’ve been working with multiple wallet vendors on this. See our overview of benefits of our approach at…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 29 19:59:25 +0000 2024](https://twitter.com/ChristopherA/status/1795907820778647991)
