--- a/_tweets-md/2024/2024-07-01-tweets.md
+++ b/_tweets-md/2024/2024-07-01-tweets.md
@@ -1,5 +1,400 @@
----    
-title: "Social Media - July"
-date: "2024-06-31"
-time:  23:59:59 +0000
----
+> Today's Gordian Wallet Community meeting focused on Gordian Sealed Transaction Protocol (GSTP), a secure, transport-agnostic request/response system that supports Encrypted State Continuations (ESC) [1/17]. https://www.youtube.com/watch?v=QnH14LkJOnI
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:32:56 +0000 2024](https://twitter.com/ChristopherA/status/1811438537272873199)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438537272873199)
+
+> Why GSTP? We need safe communication via a variety of transport methods, some of them unusual. We're not just talking about TLS for wired communication. (I co-authored TLS!) We need something more for many modern use cases, including data at rest. [2/17]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:32:58 +0000 2024](https://twitter.com/ChristopherA/status/1811438543602155546)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438543602155546)
+
+> GSTP is SECURE. This means that it uses encryption and authentication to verify every message. It is bidirectional and supports P2P thanks to key agreement using ephemeral public keys, thus avoiding the problems of centralized certification. [3/17]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:32:59 +0000 2024](https://twitter.com/ChristopherA/status/1811438547997712609)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438547997712609)
+
+> GSTP is TRANSPORT-AGNOSTIC. Sure, it could go out via TCP/IP, or it could use Tor. But it also might be sent via QR code, bluetooth, or NFC. Many of these are quite insecure as transit methods, which is why we need GSTP. [4/17]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:00 +0000 2024](https://twitter.com/ChristopherA/status/1811438552754053174)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438552754053174)
+
+> GSTP is DISTRIBUTED. It supports ESC (Encrypted State Continuations), to securely encapsulate state information. This allows computation to be resumed later without needing to retain state locally, making it ideal for constrained devices and scalable server environments. [5/17]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:01 +0000 2024](https://twitter.com/ChristopherA/status/1811438557011353658)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438557011353658)
+
+> Our video has an extensive description of how all the pieces of GSTP work together. [6/17] https://www.youtube.com/watch?v=QnH14LkJOnI
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:02 +0000 2024](https://twitter.com/ChristopherA/status/1811438562627461264)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438562627461264)
+
+> The full specification for the Gordian Sealed Transaction Protocol (GSTP) can be found in one of Blockchain Commons' Research Papers. [7/17] https://github.com/BlockchainCommons/Research/blob/master/papers/bcr-2023-014-gstp.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:04 +0000 2024](https://twitter.com/ChristopherA/status/1811438568189169825)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438568189169825)
+
+> GSTP builds on Blockchain Commons' Gordian Envelope "Smart Document" system that is built to allow for the secure, safe, holder-controllable storage of sensitive data. [8/17] https://developer.blockchaincommons.com/envelope/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:06 +0000 2024](https://twitter.com/ChristopherA/status/1811438576208589184)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438576208589184)
+
+> Our GSTP release this month was only possible due to the financial support of @FOUNDATIONdvcs as a Resarch Sponsor. Thank you! [9/17] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:07 +0000 2024](https://twitter.com/ChristopherA/status/1811438583099850977)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438583099850977)
+
+> This week's presentation on GSTP was part of our monthly Gordian meeting, a regular meeting for digital asset and identity wallet developers &amp; other parties interested in the field. [10/17] https://www.youtube.com/watch?v=xLCuvJYnTFs
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:10 +0000 2024](https://twitter.com/ChristopherA/status/1811438592939688397)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438592939688397)
+
+> Also discussed in this July's Gordian Developer Meeting, @WolfMcNally offered a demo of two new and updated command-line tools he's written in Rust. [11/17]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:12 +0000 2024](https://twitter.com/ChristopherA/status/1811438601156362273)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438601156362273)
+
+> Seedtool-CLI-Rust is our newest. It supports the creation, recovery, reconstruction, and transformation of seeds. Just install the seedtool-cli crate for Rust! [12/17] https://github.com/BlockchainCommons/seedtool-cli-rust
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:13 +0000 2024](https://twitter.com/ChristopherA/status/1811438606755750129)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438606755750129)
+
+> We've also released a comprehensive user guide for Seedtool-CLI-Rust that discusses all of its capabilities (and why to use them!) [13/17] https://github.com/BlockchainCommons/seedtool-cli-rust/blob/master/MANUAL.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:15 +0000 2024](https://twitter.com/ChristopherA/status/1811438613546283102)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438613546283102)
+
+> Our other CLI is an update of Envelope-CLI-Rust, which demonstrates some of the larger scale capabilities of Gordian Envelope, particularly its ability to elide data while retaining the validity of any signatures. That's the bc-envelope-cli crate. [14/17] https://github.com/BlockchainCommons/bc-envelope-cli-rust
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:16 +0000 2024](https://twitter.com/ChristopherA/status/1811438618415947830)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438618415947830)
+
+> That was this month's Blockchain Commons meeting! Sign up for the Gordian Developer announcements-only mailing list to get info on every monthly meeting. In August we'll have a presentation, then discussion, about BIP-85! [15/17] https://www.blockchaincommons.com/subscribe/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:17 +0000 2024](https://twitter.com/ChristopherA/status/1811438624032145585)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438624032145585)
+
+> We are seeking patronage to support further development of these open wallet and infrastructure tools! If you would like to join @FOUNDATIONdvcs as a Research Patron to help us focus on some facet of open wallet infrastructure, let us know! [16/17] https://github.com/sponsor/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:18 +0000 2024](https://twitter.com/ChristopherA/status/1811438628524179538)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1811438628524179538)
+
+> TL;DR: GSTP. Gordian Sealed Transaction Protocol. Secure, transport-agnostic, encrypted state continuation. Looking toward the future for the secure storage &amp; communication of digital assets and secure private identity. [17/17] https://www.youtube.com/watch?v=QnH14LkJOnI
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 11 16:33:19 +0000 2024](https://twitter.com/ChristopherA/status/1811438633150509530)
+
+----
+
+Replying to [@RuffTimo, @CnftMoon, @IOHK_Charles, @elonmusk, @drummondreed and @juanbenet](https://twitter.com/RuffTimo/status/1813416970345419073)
+
+> I am uncomfortable with many of the DID methods out there, and have specific issues with the final W3C DID spec. But I think the general architectural principle was sound: separate the identifier from both keys and attributes, and unbind that identifier from centralized services.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 17 03:38:28 +0000 2024](https://twitter.com/ChristopherA/status/1813417961711133173)
+
+----
+
+Replying to [@RuffTimo, @CnftMoon, @IOHK_Charles, @elonmusk, @drummondreed and @juanbenet](https://twitter.com/ChristopherA/status/1813417961711133173)
+
+> I’m particularly interested in DID methods we with inherent security, such as did:tor, or leverage peer-to-peer or small-clique microledgers for group self-sovereignty, or herd privacy. or leverage emerging threshold cryptography and skin-proofs. …
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 17 03:45:21 +0000 2024](https://twitter.com/ChristopherA/status/1813419695070146930)
+
+----
+
+Replying to [@RuffTimo, @CnftMoon, @IOHK_Charles, @elonmusk, @drummondreed and @juanbenet](https://twitter.com/ChristopherA/status/1813419695070146930)
+
+> However, competing with LESS (legally enabled self-sovereign) solutions funded by govs has been hard. We recently presented at IETF an elision-focused solution to answer two RFCs suggesting better privacy &amp; human rights, and the answer was “no demand”.
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 17 03:47:14 +0000 2024](https://twitter.com/ChristopherA/status/1813420168758132938)
+
+----
+
+Replying to [@RuffTimo, @CnftMoon, @IOHK_Charles, @elonmusk, @drummondreed and @juanbenet](https://twitter.com/ChristopherA/status/1813417961711133173)
+
+> If there are folk interested in doing it right, I’d be glad to share what is possible, and how to avoid some of the sharper edges. However, W3C DID 1.0 does is really more suited for government-supported LESS Identity project (which at least are better than status quo).
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 17 03:50:06 +0000 2024](https://twitter.com/ChristopherA/status/1813420888559333746)
+
+----
+
+> The Q2 2024 report is out from @blockchaincomns. There's info on our work on Gordian Envelope, dCBOR, SSH, Bitcoin privacy, and lots more! Take a look! [1/12] https://twitter.com/BlockchainComns/status/1816189610235744668
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:52 +0000 2024](https://twitter.com/ChristopherA/status/1816191085842243951)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191089008914856)
+
+> Envelope is built on deterministic CBOR (dCBOR), which @BlockchainComns also talks about in the quarterly report. The biggest news? Increased uptake of dCBOR by developers and CBOR experts. [4/12] https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:53 +0000 2024](https://twitter.com/ChristopherA/status/1816191090468479095)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191087553438016)
+
+> But also take a look at our Request/Response video, which demonstrates some of the more advanced capabilities of Gordian Envelope, which can automate processes by taking out unnecessary human intervention, and actually increase security! [3/12] https://www.youtube.com/watch?v=ZXDf2cmfX1k
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:53 +0000 2024](https://twitter.com/ChristopherA/status/1816191089008914856)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191085842243951)
+
+> Gordian Envelope is Blockchain Commons' foundational "Smart Document" system. Some of our work this quarter was to better explain it in a new executive summary. [2/12] https://developer.blockchaincommons.com/envelope/summary/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:53 +0000 2024](https://twitter.com/ChristopherA/status/1816191087553438016)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191093480005803)
+
+> One of our biggest expansions this quarter was into SSH. We're working on making it more secure to distribute software. Our first step has been to update the Envelope CLI to support SSH signing. [7/12] https://github.com/BlockchainCommons/bc-envelope-cli-rust
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:54 +0000 2024](https://twitter.com/ChristopherA/status/1816191095107432581)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191091970039873)
+
+> Also at our Gordian Developer Meetings, @bitgould talked about Bitcoin's PayJoin and its future. [6/12] https://www.youtube.com/watch?v=oMGL-Y498ZQ
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:54 +0000 2024](https://twitter.com/ChristopherA/status/1816191093480005803)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191090468479095)
+
+> Community is important! Blockchain Commons is creating interoperable specs for use by everyone. We were thus thrilled to have a few presentations from the community this quarter. @jesseposner talked about FROST, and its usefulness for Bitcoin. [5/12] https://www.youtube.com/watch?v=uCM8dDql6oo
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:54 +0000 2024](https://twitter.com/ChristopherA/status/1816191091970039873)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191097879822530)
+
+> But there was so much more. Take a look at the quarterly report for design patterns, DID futures, graphs in Envelope, and all of the other stuff I missed! [10/12] https://www.blockchaincommons.com/quarterlies/Q2-2024/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:55 +0000 2024](https://twitter.com/ChristopherA/status/1816191099322732986)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191096537641427)
+
+> I wrote a "musing" article about our practice of Minimum Viable Architecture, and why it's a better development methodology than MVPs. It is another highlight of the quarter. [9/12] https://www.blockchaincommons.com/musings/musings-mva/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:55 +0000 2024](https://twitter.com/ChristopherA/status/1816191097879822530)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191095107432581)
+
+> We also did some major work on the Gordian Sealed Transaction Protocol (GSTP), which uses Envelopes for secure communication with a new and innovative system we call Encrypted State Continuations (ESC). Take a look at the video! [8/12] https://www.youtube.com/watch?v=QnH14LkJOnI
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:55 +0000 2024](https://twitter.com/ChristopherA/status/1816191096537641427)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191100941656133)
+
+> And please become a sponsor to support the continued development of private, resilient, open, and independent digital-asset systems. [12/12] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:56 +0000 2024](https://twitter.com/ChristopherA/status/1816191102359330898)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816191099322732986)
+
+> Subscribe to the Gordian Developers announcement-only mailing list so that you can be notified of our latest feature presentations and wallet developer conversations. [11/12] https://www.blockchaincommons.com/subscribe/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:17:56 +0000 2024](https://twitter.com/ChristopherA/status/1816191100941656133)
+
+----
+
+> RT @gosu128: Amazing new concept for Web3. Worth reading.   
+>   
+> Musings of a Trust Architect: Minimum Viable Architecture (MVA) https://t.co/Cd…
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 24 19:25:10 +0000 2024](https://twitter.com/ChristopherA/status/1816192920829190573)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816517209298268532)
+
+> The Ledger Seed Tool app has been released and can be installed from Ledger Live, and is available for all Ledger Nano devices; Nano S, Nano S Plus and Nano X. Ledger Stax version is still a work in progress
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 16:53:46 +0000 2024](https://twitter.com/ChristopherA/status/1816517210715885707)
+
+----
+
+> I'm pleased to hear that @Ledger is now officially offers an alternative to Ledger Recover with an SSKR (Sharded Secret Key Reconstruction) app. It supports user's to be the sole keepers of their seed phrase, but splits into shares for reliability.  
+> https://www.ledger.com/blog/seed-tool-app
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 16:53:46 +0000 2024](https://twitter.com/ChristopherA/status/1816517209298268532)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816517211990942101)
+
+> These standards for wallet interoperability can only happen with your financial support. If self-sovereign recovery using SSKR secret shares is important to you, sponsor us at https://github.com/sponsors/blockchaincommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 16:53:47 +0000 2024](https://twitter.com/ChristopherA/status/1816517213442179447)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816517210715885707)
+
+> With SSKR being available to more than 6 million hardware devices, I hope that more wallets will offer the interoperable SSKR standard as an alternative to backup and restore cryptographic seeds. For more details see: https://developer.blockchaincommons.com/sskr/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 16:53:47 +0000 2024](https://twitter.com/ChristopherA/status/1816517211990942101)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519166557630840)
+
+> At our August Gordian Developers Meeting (August 7th, 10am PDT), BIP-85 champion Aneesh Karve @akarve will give a feature presentation on BIP-85. If you're a wallet developer, or just interested in Bitcoin, just us! [2/10] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:33 +0000 2024](https://twitter.com/ChristopherA/status/1816519168294027329)
+
+----
+
+> How do you create, manage &amp; store digital-asset seeds in a way that's secure &amp; resilient? That's a question that @BlockchainComns has worked on since the start &amp; we'd like to talk about a useful tool at our meeting this August: BIP-85. [1/10] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:33 +0000 2024](https://twitter.com/ChristopherA/status/1816519166557630840)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519171204849682)
+
+> What is BIP-85's current state? What are the use cases for it instead of HD keys? What is its future? We hope to cover that and more at our August Gordian Developers Meeting. [5/10]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:34 +0000 2024](https://twitter.com/ChristopherA/status/1816519172551331876)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519169711718809)
+
+> BIP-85 is fundamentally a way to use a master seed to deterministically generate children seed, so you can safely use one seed to manage seeds on a multitude of devices. [4/10]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:34 +0000 2024](https://twitter.com/ChristopherA/status/1816519171204849682)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519168294027329)
+
+> The BIP-85 cheekily states: "One Seed to rule them all, One Key to find them, One Path to bring them all, And in cryptography bind them." [3/10] https://github.com/bitcoin/bips/blob/master/bip-0085.mediawiki#abstract
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:34 +0000 2024](https://twitter.com/ChristopherA/status/1816519169711718809)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519175877329302)
+
+> Bring your own seed-related topics! We'd love to talk about them! Our ultimate goal is to create interoperable specifications and best practices that help everyone in the digital-asset space (especially users!) [7/10]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:35 +0000 2024](https://twitter.com/ChristopherA/status/1816519177303433503)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519173981585837)
+
+> More generally, August's Gordian Developers Meeting will cover a variety of topics about seeds, which are the heart of protecting your digital assets. We'll talk about about backup methods such as SSKR, the use of metadata, and more! [6/10]
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:35 +0000 2024](https://twitter.com/ChristopherA/status/1816519175877329302)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519172551331876)
+
+> More generally, August's Gordian Developers Meeting will cover a variety of topics about seeds, which are the heart of protecting your digital assets. We'll talk about about backup methods such as SSKR, the use of metadata, and more! [6/10] https://x.com/ChristopherA/status/1816517209298268532
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:35 +0000 2024](https://twitter.com/ChristopherA/status/1816519173981585837)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519180113576303)
+
+> Support Blockchain Commons' work in support cryptographic wallet interoperability by becoming a GitHub patron. Every sponsorship, big or small, helps to demonstrate the importance of our work. [10/10] https://github.com/sponsors/BlockchainCommons
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:36 +0000 2024](https://twitter.com/ChristopherA/status/1816519181845823639)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519178641375681)
+
+> Subscribe to Blockchain Commons' announcements-only mailing list for wallet developers to see the monthly announcements for our meetings and feature presentations. [9/10] https://www.blockchaincommons.com/subscribe/
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:36 +0000 2024](https://twitter.com/ChristopherA/status/1816519180113576303)
+
+----
+
+Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1816519177303433503)
+
+> Click through to our August Meeting page to download an ICS calendar file to put the BIP-85 &amp; Seed meeting on your calendar. [8/10] https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/bip85-meeting.md
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 25 17:01:36 +0000 2024](https://twitter.com/ChristopherA/status/1816519178641375681)
+
+----
+
+Replying to [@nvk](https://twitter.com/nvk/status/1817892967165661490)
+
+> Take a look at the benefits of Request/Response for UX (and also security): https://youtu.be/ZXDf2cmfX1k
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 30 01:23:51 +0000 2024](https://twitter.com/ChristopherA/status/1818095127627489749)
+
+----
+
+Replying to [@nvk](https://twitter.com/ChristopherA/status/1818095127627489749)
+
+> https://github.com/BlockchainCommons/SmartCustody/blob/master/Docs/Scenario-Multisig-RR.md 
+> 
+> ![1818096833199235519-GTstb0xboAEV6Pf]({{ site.url }}{{ site.baseurl }}/assets/images/media/1818096833199235519-GTstb0xboAEV6Pf.webp)
+
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 30 01:30:38 +0000 2024](https://twitter.com/ChristopherA/status/1818096833199235519)
